# OpenOCR

./: .gitignore  requirements.txt
TensorRT_infer/: CMakeLists.txt
TensorRT_infer/engine/: rec_model.onnx
TensorRT_infer/include/: infer.hpp
TensorRT_infer/src/: infer.cpp  main.cpp
configs/rec/svtrv2/: custom.yml
my_data/: clear.sh  gen_data.py
openrec/postprocess/: ctc_postprocess.py
tools/: export_rec.py  infer_rec.py  toonnx.py
tools/infer/: onnx_engine.py
tools/utils/: ckpt.py
tools/utils/dict/: math_expr_dict.txt
